# Copyright (C) 2009-2016 Michal Cihar <michal@cihar.com>
#============================================================================

List of user-visible changes in Enca
More detailed log can be obtained from older changelogs or git log.

Legend: + new feature
        * change of behaviour (including disappearing of a feature)
        - bugfix

enca-1.20
  - fix crosscompilation issues

enca-1.19 2016-09-05
  - fix possible memory leak
  - make utf-8 detection work even on one character

enca-1.18 2016-01-07
  - fix installation of devhelp documentation

enca-1.17 2016-01-04
  - Fixed conversion of GB2312 encoding with iconv
  - Fixed iconv conversion on OSX
  - Documentation improvements
  - Fixed execution of external converters with ACLs
  - Improved test coverage to 80%

enca-1.16 2014-10-20
  - Fixed typo in Belarusian language name
  - Added aliases for Chinese and Yugoslavian languages

enca-1.15 2013-09-30
  - Documentation improvement
  - Development moved to GitHub
  - Do not use deprecated autoconf macros

enca-1.14 2012-09-11
  - Allow standard names for belarusian and slovenian languages, thanks 
    to Branislav Geržo for suggestion.
  - Reset strictness when check buffer less than file size, thanks to 
    Sam Liao.
  - Fixed typos in man page, thanks to A. Costa.

enca-1.13 2010-02-09
  - Reverse usage of temp file while converting using recode to prevent
    file truncation (bug #1135).

enca-1.12 2009-10-29
  - Fixes some minor memory leaks.
  - Fixes little problems in autoconf scripts.

enca-1.11 2009-09-25
  - Dropped scanf configure test which is not used at all.
  - Fixes some wrong format strings.

enca-1.10 2009-08-25
  + Enca is back alive or at least in maintenance mode.
  * Enca now lives in git repository, see <http://gitorious.org/enca>.
  - Add missing charset koi8u to belarusian language.
  - Fixed some typos in program and documentation.

enca-1.9 2005-12-18
  + support for HZ encoding
  * Big5 and GBK detection improved