@@ -13,7 +13,14 @@ Legend: + new feature
 
 enca-1.20
   - fix crosscompilation issues
-
+  - fix documentation build
+  - fix compiler warnings
+  - fix librecode detection
+  - fix normalize.py input format
+  + with --disable-gtk-doc docs are not installed
+  + add support for testing on MSYS2 MINGW
+  - fixed normalize.pl input format.
+  + add usage help to normalize.pl and countall
 enca-1.19 2016-09-05
   - fix possible memory leak
   - make utf-8 detection work even on one character
@@ -38,9 +45,9 @@ enca-1.15 2013-09-30
   - Do not use deprecated autoconf macros
 
 enca-1.14 2012-09-11
-  - Allow standard names for belarusian and slovenian languages, thanks 
+  - Allow standard names for belarusian and slovenian languages, thanks
     to Branislav Geržo for suggestion.
-  - Reset strictness when check buffer less than file size, thanks to 
+  - Reset strictness when check buffer less than file size, thanks to
     Sam Liao.
   - Fixed typos in man page, thanks to A. Costa.
 
